// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Questionnaire container renders without crashing 1`] = `
<QuestionnaireAnswersFormContainer
  fetchQuestionnaire={[Function]}
  isLoading={false}
  match={
    Object {
      "params": 5,
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <div>
    <Loading>
      <div
        className="loading-screen"
      >
        <img
          alt="loadig"
          id="loading"
          src="https://tools.cisco.com/security/center/Resources/images/loader.gif"
        />
      </div>
    </Loading>
  </div>
</QuestionnaireAnswersFormContainer>
`;

exports[`Questionnaire container when questionnaire data is available renders Questionnaire component with questionnaire props 1`] = `
<Connect(AnswersFormContainer)
  questionnaire={
    Object {
      "created_at": "2017-08-18T00:02:54.066Z",
      "id": 1,
      "questions": Object {
        "1": Object {
          "id": 1,
          "label": "describe ragdoll traits",
          "name": "Ragdoll traits",
        },
        "2": Object {
          "id": 2,
          "label": "describe persian traits",
          "name": "Persian traits",
        },
      },
      "title": "Cat breeds",
      "updated_at": "2017-08-18T00:02:54.066Z",
    }
  }
/>
`;

exports[`Questionnaire container when questionnaire data is available renders self with questionnaire props 1`] = `
<QuestionnaireAnswersFormContainer
  fetchQuestionnaire={[Function]}
  isLoading={false}
  questionnaire={
    Object {
      "created_at": "2017-08-18T00:02:54.066Z",
      "id": 1,
      "questions": Object {
        "1": Object {
          "id": 1,
          "label": "describe ragdoll traits",
          "name": "Ragdoll traits",
        },
        "2": Object {
          "id": 2,
          "label": "describe persian traits",
          "name": "Persian traits",
        },
      },
      "title": "Cat breeds",
      "updated_at": "2017-08-18T00:02:54.066Z",
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "notify": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": null,
    }
  }
/>
`;
